--- a/notebooks/luisbazevedo_draft_0.ipynb
+++ b/notebooks/luisbazevedo_draft_0.ipynb
@@ -17,7 +17,10 @@
     "    4. Feature Engineering\n",
     "    5. In-depth exploration\n",
     "    6. Data transformation\n",
-    "    "
+    "\n",
+    "<br><br>\n",
+    "note: focus on 2009 vs 2015\n",
+    "1. geospatial analysis\n"
    ]
   },
   {
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +40,8 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "plt.style.use('ggplot')"
    ]
   },
   {
@@ -235,6 +239,206 @@
    ],
    "source": [
     "df_gpd.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's first focus on a specific timestamp and explore spatial variations:\n",
+    "* year of 2009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. df_diseases\n",
+    "df_diseases.drop(columns=['measure_id','location_id','measure_name','sex_id','age_id','age_name','cause_id','metric_id'\\\n",
+    "                         ,'upper','lower'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Anxiety disorders             394\n",
+       "Dermatitis                    394\n",
+       "Headache disorders            394\n",
+       "Musculoskeletal disorders     394\n",
+       "Bipolar disorder              394\n",
+       "Depressive disorders          394\n",
+       "Stroke                        394\n",
+       "Hypertensive heart disease     44\n",
+       "Name: cause_name, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sub-divide df in df_male & df_female\n",
+    "df_diseases_male_2009 = df_diseases.loc[df_diseases['sex_name'].isin(['Male'])]\\\n",
+    ".loc[df_diseases['year'] == 2009].drop(columns=['sex_name','year']).copy()\n",
+    "\n",
+    "df_diseases_female_2009 = df_diseases.loc[df_diseases['sex_name'].isin(['Female'])]\\\n",
+    ".loc[df_diseases['year'] == 2009].drop(columns=['sex_name','year']).copy()\n",
+    "\n",
+    "df_diseases_male_2009.cause_name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location_name</th>\n",
+       "      <th>cause_name</th>\n",
+       "      <th>metric_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Kyrgyzstan</td>\n",
+       "      <td>Headache disorders</td>\n",
+       "      <td>Number</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>284784.143493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kyrgyzstan</td>\n",
+       "      <td>Headache disorders</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.028188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Stroke</td>\n",
+       "      <td>Number</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>115452.977165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Stroke</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Hypertensive heart disease</td>\n",
+       "      <td>Number</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>Hypertensive heart disease</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>Stroke</td>\n",
+       "      <td>Number</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>15311.802201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>Stroke</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Hypertensive heart disease</td>\n",
+       "      <td>Number</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Hypertensive heart disease</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   location_name                  cause_name metric_name  year            val\n",
+       "0     Kyrgyzstan          Headache disorders      Number  2000  284784.143493\n",
+       "3     Kyrgyzstan          Headache disorders     Percent  2000       0.028188\n",
+       "6         Brazil                      Stroke      Number  2000  115452.977165\n",
+       "9         Brazil                      Stroke     Percent  2000       0.000208\n",
+       "12        Brazil  Hypertensive heart disease      Number  2000       0.000000\n",
+       "15        Brazil  Hypertensive heart disease     Percent  2000       0.000000\n",
+       "18    Uzbekistan                      Stroke      Number  2000   15311.802201\n",
+       "21    Uzbekistan                      Stroke     Percent  2000       0.000323\n",
+       "24         China  Hypertensive heart disease      Number  2000       0.000000\n",
+       "27         China  Hypertensive heart disease     Percent  2000       0.000000"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_columns_abs = ['Anxiety disorders','Dermatitis','Headache disorders','Musculoskeletal disorders'\\\n",
+    "                  ,'Bipolar disorder','Depressive disorders','Stroke','Hypertensive heart disease']\n",
+    "\n",
+    "new_columns_per = ['Anxiety disorders_%','Dermatitis_%','Headache disorders_%','Musculoskeletal disorders_%'\\\n",
+    "                  ,'Bipolar disorder_%','Depressive disorders_%','Stroke_%','Hypertensive heart disease_%']\n",
+    "\n"
    ]
   }
  ],
