--- a/raw data/Diseases_GHDx_2/IHME-GBD_2019_DATA-16b07a3d-2/luisbazevedo_draft_1.ipynb
+++ b/raw data/Diseases_GHDx_2/IHME-GBD_2019_DATA-16b07a3d-2/luisbazevedo_draft_1.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +255,329 @@
     "    df = df.rename_axis('location_name')\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Series Code</th>\n",
+       "      <th>per_female_agriculture</th>\n",
+       "      <th>per_male_agriculture</th>\n",
+       "      <th>per_total_agriculture</th>\n",
+       "      <th>per_female_employment</th>\n",
+       "      <th>per_male_employment</th>\n",
+       "      <th>per_total_employment</th>\n",
+       "      <th>per_female_industry</th>\n",
+       "      <th>per_male_industry</th>\n",
+       "      <th>per_total_industry</th>\n",
+       "      <th>per_female_services</th>\n",
+       "      <th>per_male_industry</th>\n",
+       "      <th>per_total_services</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>location_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>74.220001</td>\n",
+       "      <td>53.889999</td>\n",
+       "      <td>56.889999</td>\n",
+       "      <td>12.860000</td>\n",
+       "      <td>70.360001</td>\n",
+       "      <td>42.349998</td>\n",
+       "      <td>14.810000</td>\n",
+       "      <td>13.430000</td>\n",
+       "      <td>13.630000</td>\n",
+       "      <td>10.970000</td>\n",
+       "      <td>32.680000</td>\n",
+       "      <td>29.480000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>57.220001</td>\n",
+       "      <td>35.049999</td>\n",
+       "      <td>44.049999</td>\n",
+       "      <td>37.919998</td>\n",
+       "      <td>56.360001</td>\n",
+       "      <td>47.070000</td>\n",
+       "      <td>10.260000</td>\n",
+       "      <td>26.559999</td>\n",
+       "      <td>19.940001</td>\n",
+       "      <td>32.520000</td>\n",
+       "      <td>38.389999</td>\n",
+       "      <td>36.009998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>4.200000</td>\n",
+       "      <td>14.620000</td>\n",
+       "      <td>13.030000</td>\n",
+       "      <td>11.630000</td>\n",
+       "      <td>63.720001</td>\n",
+       "      <td>37.820000</td>\n",
+       "      <td>24.730000</td>\n",
+       "      <td>30.440001</td>\n",
+       "      <td>29.570000</td>\n",
+       "      <td>71.080002</td>\n",
+       "      <td>54.930000</td>\n",
+       "      <td>57.400002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>American Samoa</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West Bank and Gaza</th>\n",
+       "      <td>24.010000</td>\n",
+       "      <td>10.060000</td>\n",
+       "      <td>12.600000</td>\n",
+       "      <td>11.470000</td>\n",
+       "      <td>50.380001</td>\n",
+       "      <td>31.129999</td>\n",
+       "      <td>8.460000</td>\n",
+       "      <td>26.900000</td>\n",
+       "      <td>23.530001</td>\n",
+       "      <td>67.529999</td>\n",
+       "      <td>63.049999</td>\n",
+       "      <td>63.860001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>World</th>\n",
+       "      <td>32.867313</td>\n",
+       "      <td>34.237845</td>\n",
+       "      <td>33.697765</td>\n",
+       "      <td>46.173780</td>\n",
+       "      <td>71.870755</td>\n",
+       "      <td>59.003547</td>\n",
+       "      <td>16.365849</td>\n",
+       "      <td>25.952533</td>\n",
+       "      <td>22.196706</td>\n",
+       "      <td>50.768125</td>\n",
+       "      <td>39.812757</td>\n",
+       "      <td>44.106783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yemen, Rep.</th>\n",
+       "      <td>30.610001</td>\n",
+       "      <td>24.520000</td>\n",
+       "      <td>25.299999</td>\n",
+       "      <td>8.850000</td>\n",
+       "      <td>60.720001</td>\n",
+       "      <td>34.779999</td>\n",
+       "      <td>13.050000</td>\n",
+       "      <td>19.219999</td>\n",
+       "      <td>18.430000</td>\n",
+       "      <td>56.349998</td>\n",
+       "      <td>56.259998</td>\n",
+       "      <td>56.270000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zambia</th>\n",
+       "      <td>76.129997</td>\n",
+       "      <td>60.779999</td>\n",
+       "      <td>68.089996</td>\n",
+       "      <td>64.139999</td>\n",
+       "      <td>74.519997</td>\n",
+       "      <td>69.190002</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>12.640000</td>\n",
+       "      <td>8.100000</td>\n",
+       "      <td>20.770000</td>\n",
+       "      <td>26.580000</td>\n",
+       "      <td>23.809999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zimbabwe</th>\n",
+       "      <td>72.320000</td>\n",
+       "      <td>59.720001</td>\n",
+       "      <td>66.070000</td>\n",
+       "      <td>72.980003</td>\n",
+       "      <td>84.419998</td>\n",
+       "      <td>78.239998</td>\n",
+       "      <td>3.210000</td>\n",
+       "      <td>15.240000</td>\n",
+       "      <td>9.180000</td>\n",
+       "      <td>24.469999</td>\n",
+       "      <td>25.040001</td>\n",
+       "      <td>24.750000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>264 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Series Code         per_female_agriculture  per_male_agriculture  \\\n",
+       "location_name                                                      \n",
+       "Afghanistan                      74.220001             53.889999   \n",
+       "Albania                          57.220001             35.049999   \n",
+       "Algeria                           4.200000             14.620000   \n",
+       "American Samoa                         NaN                   NaN   \n",
+       "Andorra                                NaN                   NaN   \n",
+       "...                                    ...                   ...   \n",
+       "West Bank and Gaza               24.010000             10.060000   \n",
+       "World                            32.867313             34.237845   \n",
+       "Yemen, Rep.                      30.610001             24.520000   \n",
+       "Zambia                           76.129997             60.779999   \n",
+       "Zimbabwe                         72.320000             59.720001   \n",
+       "\n",
+       "Series Code         per_total_agriculture  per_female_employment  \\\n",
+       "location_name                                                      \n",
+       "Afghanistan                     56.889999              12.860000   \n",
+       "Albania                         44.049999              37.919998   \n",
+       "Algeria                         13.030000              11.630000   \n",
+       "American Samoa                        NaN                    NaN   \n",
+       "Andorra                               NaN                    NaN   \n",
+       "...                                   ...                    ...   \n",
+       "West Bank and Gaza              12.600000              11.470000   \n",
+       "World                           33.697765              46.173780   \n",
+       "Yemen, Rep.                     25.299999               8.850000   \n",
+       "Zambia                          68.089996              64.139999   \n",
+       "Zimbabwe                        66.070000              72.980003   \n",
+       "\n",
+       "Series Code         per_male_employment  per_total_employment  \\\n",
+       "location_name                                                   \n",
+       "Afghanistan                   70.360001             42.349998   \n",
+       "Albania                       56.360001             47.070000   \n",
+       "Algeria                       63.720001             37.820000   \n",
+       "American Samoa                      NaN                   NaN   \n",
+       "Andorra                             NaN                   NaN   \n",
+       "...                                 ...                   ...   \n",
+       "West Bank and Gaza            50.380001             31.129999   \n",
+       "World                         71.870755             59.003547   \n",
+       "Yemen, Rep.                   60.720001             34.779999   \n",
+       "Zambia                        74.519997             69.190002   \n",
+       "Zimbabwe                      84.419998             78.239998   \n",
+       "\n",
+       "Series Code         per_female_industry  per_male_industry  \\\n",
+       "location_name                                                \n",
+       "Afghanistan                   14.810000          13.430000   \n",
+       "Albania                       10.260000          26.559999   \n",
+       "Algeria                       24.730000          30.440001   \n",
+       "American Samoa                      NaN                NaN   \n",
+       "Andorra                             NaN                NaN   \n",
+       "...                                 ...                ...   \n",
+       "West Bank and Gaza             8.460000          26.900000   \n",
+       "World                         16.365849          25.952533   \n",
+       "Yemen, Rep.                   13.050000          19.219999   \n",
+       "Zambia                         3.100000          12.640000   \n",
+       "Zimbabwe                       3.210000          15.240000   \n",
+       "\n",
+       "Series Code         per_total_industry  per_female_services  \\\n",
+       "location_name                                                 \n",
+       "Afghanistan                  13.630000            10.970000   \n",
+       "Albania                      19.940001            32.520000   \n",
+       "Algeria                      29.570000            71.080002   \n",
+       "American Samoa                     NaN                  NaN   \n",
+       "Andorra                            NaN                  NaN   \n",
+       "...                                ...                  ...   \n",
+       "West Bank and Gaza           23.530001            67.529999   \n",
+       "World                        22.196706            50.768125   \n",
+       "Yemen, Rep.                  18.430000            56.349998   \n",
+       "Zambia                        8.100000            20.770000   \n",
+       "Zimbabwe                      9.180000            24.469999   \n",
+       "\n",
+       "Series Code         per_male_industry  per_total_services  \n",
+       "location_name                                              \n",
+       "Afghanistan                 32.680000           29.480000  \n",
+       "Albania                     38.389999           36.009998  \n",
+       "Algeria                     54.930000           57.400002  \n",
+       "American Samoa                    NaN                 NaN  \n",
+       "Andorra                           NaN                 NaN  \n",
+       "...                               ...                 ...  \n",
+       "West Bank and Gaza          63.049999           63.860001  \n",
+       "World                       39.812757           44.106783  \n",
+       "Yemen, Rep.                 56.259998           56.270000  \n",
+       "Zambia                      26.580000           23.809999  \n",
+       "Zimbabwe                    25.040001           24.750000  \n",
+       "\n",
+       "[264 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_employment(df_employment,'2009')"
    ]
   }
  ],
