--- a/notebooks/luisbazevedo_draft_0.ipynb
+++ b/notebooks/luisbazevedo_draft_0.ipynb
@@ -62,6 +62,7 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import requests\n",
     "plt.style.use('ggplot')"
    ]
   },
